# translation-methods

./: .gitignore
lab1/: .302.pl.swp  101.pl  102.pl  103.pl  104.pl  105.pl  106.pl  107.pl  108.pl  109.pl  110.pl  111.pl  201.pl  202.pl  203.pl  204.pl  205.pl  206.pl  207.pl  208.pl  209.pl  210.pl  301.pl  302.pl
lab2/: README.md
lab2/KotlinArray/: CMakeLists.txt  build_graph.sh  main.cpp  tests.cpp
lab2/KotlinArray/helpers/: FirstFollow.cpp  FirstFollow.h
lab2/KotlinArray/lexical-analyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  ParseException.cpp  ParseException.h
lab2/KotlinArray/parser/: Parser.cpp  Parser.h  Tree.cpp  Tree.h
lab2/KotlinArray/visualizer/: test.dot
lab3/: README.md
lab3/Python2C/: build.gradle  program.py
lab3/Python2C/c/: assignment.c  bool-expression.c  comparison.c  complicated-if.c  complicated-swap.c  if-else.c  if-reentrancy.c  input-output.c  input.c  int-expression.c  output.c  primitives.c  simple-if.c  swap.c
lab3/Python2C/python/: assignment.py  bool-expression.py  comparison.py  complicated-if.py  complicated-swap.py  if-else.py  if-reentrancy.py  input-output.py  input.py  int-expression.py  output.py  primitives.py  simple-if.py  swap.py
lab3/Python2C/samples/: program.py
lab3/Python2C/src/main/antlr/: Program.g4
lab3/Python2Cpp/: build.gradle  settings.gradle
lab4/: README.md
lab4/TranslatorGenerator/: build.gradle  settings.gradle
lab4/TranslatorGenerator/sample/: Calculator.grammar  KotlinArray.grammar
lab4/TranslatorGenerator/visualizer/: array.dot  calculator.dot  test.dot
(+25 files in other folders)
